--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,11 +1,18 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  max-width: 80vw;
+  margin: 5rem auto;
 }
 
 ol,
 ul {
   padding-left: 30px;
+}
+
+#title {
+  text-align: center;
+  line-height: 3rem;
+  font-size: 3rem;
 }
 
 .board-row:after {
@@ -21,16 +28,17 @@ ul {
 .square {
   background: #fff;
   border: 1px solid #999;
+  color: rgb(52, 62, 83);
   float: left;
-  font-size: 24px;
+  font-size: 3rem;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 5rem;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 5rem;
 }
 
 .square:focus {
@@ -42,10 +50,29 @@ ul {
 }
 
 .game {
+  width: 50vw;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .game-info {
-  margin-left: 20px;
+  margin: 20px;
+}
+.game-info button {
+  background: rgb(154, 176, 238);
+  color: rgb(52, 62, 83);
+  width: 7rem;
+  border: 1px solid rgb(52, 62, 83);
+  border-radius: 3px;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  transition: all 0.8s;
+}
+
+.game-info button:hover {
+  background: rgb(52, 62, 83);
+  color: rgb(154, 176, 238);
 }
